test/overlay/srs/srs-2/allow-namespace-srs-1.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-namespace-srs-1
spec:
  podSelector: {}
  ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            app.kubernetes.io/instance: srs-1
