test/overlay/srs/srs-2/kustomization.yml
apiVersion: kustomize.config.k8s.io/v1beta1
kind: Kustomization
namespace: srs-2

resources:
  - ../../../base
